{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "628f7fc2-6266-42be-a67f-aab50c635ca4",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "a8725957-023f-478a-9071-6f5fd14087bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "02d14a09-cdc3-40e6-b849-e3dd281314f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LRMove",
                    "type": "Value",
                    "id": "dbb5aefd-f56c-4902-9f9d-ccb43c38046f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e70af0a9-6975-4e03-93e5-f78ffca552a7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63be0936-b346-4982-9e44-deabd0d12fac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "88997e09-4918-4917-9157-5004a0a44aea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LRMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "28b2bd81-6cd2-43ea-8b0b-95942a6445c5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LRMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71c78198-69cb-4ed8-9f15-71f39806f8c9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LRMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerInput",
            "bindingGroup": "PlayerInput",
            "devices": []
        }
    ]
}